--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/tv_ffmpeg_version"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
