--- a/app/src/main/res/layout/activity_native_media_player.xml
+++ b/app/src/main/res/layout/activity_native_media_player.xml
@@ -10,4 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <SeekBar
+        android:id="@+id/seek_bar"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
+
 </RelativeLayout>
